<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="right|center"
            android:text="@string/login_mobiler_title"
            android:textColor="@color/black"
            android:textSize="@dimen/title_normal" />

        <EditText
            android:id="@+id/edt_mobile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@drawable/edit_green"
            android:focusable="true"
            android:gravity="left|center"
            android:hint=""
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="@color/large_gray"
            android:textSize="@dimen/title_normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="right|center"
            android:text="@string/login_pwd_title"
            android:textColor="@color/black"
            android:textSize="@dimen/title_normal" />

        <EditText
            android:id="@+id/edt_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@drawable/edit_green"
            android:gravity="left|center"
            android:hint=""
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="@color/large_gray"
            android:textSize="@dimen/title_normal" />

    </LinearLayout>

    <we.video.wevideo.ui.support.WaveButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_shape_main_green_btn_normal"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/title_normal" />

    <TextView
        android:id="@+id/tv_findpwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|right"
        android:layout_marginTop="10dp"
        android:autoLink="all"
        android:linksClickable="true"
        android:text="@string/findpwd"
        android:textColor="@color/main_blue"
        android:textSize="@dimen/title_normal" />

    <we.video.wevideo.ui.support.WaveButton
        android:id="@+id/btn_reg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_shape_main_green_btn_normal"
        android:gravity="center"
        android:text="@string/reg"
        android:textColor="@color/white"
        android:textSize="@dimen/title_normal" />

    <we.video.wevideo.ui.support.WaveButton
        android:id="@+id/btn_weixin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_shape_main_green_btn_normal"
        android:gravity="center"
        android:text="@string/login_weixin"
        android:textColor="@color/white"
        android:textSize="@dimen/title_normal" />

    <we.video.wevideo.ui.support.WaveButton
        android:id="@+id/btn_weibo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_shape_main_green_btn_normal"
        android:gravity="center"
        android:text="@string/login_weibo"
        android:textColor="@color/white"
        android:textSize="@dimen/title_normal" />

</LinearLayout>