<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_special_title"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:gravity="bottom"
            android:text="@string/special_title"
            android:textColor="@color/black"
            android:textSize="@dimen/title_small" />

        <TextView
            android:id="@+id/tv_special_name"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/tv_special_title"
            android:gravity="bottom"
            android:text="111"
            android:textColor="@color/black"
            android:textSize="@dimen/title_normal" />

        <TextView
            android:id="@+id/tv_read_num_title"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tv_special_name"
            android:gravity="bottom"
            android:text="@string/special_read_title"
            android:textColor="@color/black"
            android:textSize="@dimen/title_small" />

        <TextView
            android:id="@+id/tv_read_num"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/tv_read_num_title"
            android:gravity="bottom"
            android:text="2"
            android:textColor="@color/black"
            android:textSize="@dimen/title_normal" />

        <Button
            android:id="@+id/btn_share"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/btn_collect"
            android:background="@drawable/main_blue_btn"
            android:gravity="center"
            android:text="@string/share"
            android:textColor="@color/white"
            android:textSize="@dimen/title_small" />

        <Button
            android:id="@+id/btn_collect"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/main_blue_btn"
            android:gravity="center"
            android:text="@string/collect"
            android:textColor="@color/white"
            android:textSize="@dimen/title_small" />

        <TextView
            android:id="@+id/tv_video_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_special_title"
            android:layout_marginTop="5dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/title_small" />

        <RelativeLayout
            android:id="@+id/layout_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_video_title"
            android:layout_marginTop="5dp">

            <we.video.wevideo.ui.support.round.RoundImageView
                android:id="@+id/iv_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:type="0" />

            <TextView
                android:id="@+id/tv_author_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/iv_icon"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textSize="@dimen/title_normal" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_special"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/bg_shape_rect_green_btn_normal"
            android:text="@string/special_back_look"
            android:textColor="@color/white"
            android:textSize="@dimen/title_normal" />

        <Button
            android:id="@+id/btn_product"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@drawable/bg_shape_rect_green_btn_press"
            android:text="@string/special_recommand"
            android:textColor="@color/white"
            android:textSize="@dimen/title_normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"></LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:text="@string/special_comment"
            android:textColor="@color/black"
            android:textSize="@dimen/title_normal" />

        <Button
            android:id="@+id/btn_comment"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/main_blue_btn"
            android:gravity="center"
            android:text="评论"
            android:textColor="@color/white"
            android:textSize="@dimen/title_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_m" />

    </RelativeLayout>
</LinearLayout>