<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="right|center"
            android:text="@string/login_pwd_title"
            android:textColor="@color/black"
            android:textSize="@dimen/title_normal" />

        <EditText
            android:id="@+id/edt_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@drawable/edit_green"
            android:focusable="true"
            android:gravity="left|center"
            android:hint=""
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="@color/large_gray"
            android:textSize="@dimen/title_normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="right|center"
            android:text="@string/reg_confirm_pwd_title"
            android:textColor="@color/black"
            android:textSize="@dimen/title_normal" />

        <EditText
            android:id="@+id/edt_confirm_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@drawable/edit_green"
            android:gravity="left|center"
            android:hint=""
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="@color/large_gray"
            android:textSize="@dimen/title_normal" />
    </LinearLayout>

    <we.video.wevideo.ui.support.WaveButton
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="20dp"
        android:background="@drawable/main_green_btn"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="@dimen/title_normal" />

</LinearLayout>