<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <we.video.wevideo.ui.support.round.RoundImageView
            android:id="@+id/iv_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            app:type="0" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="昵称"
            android:textColor="@color/black"
            android:textSize="@dimen/title_normal" />

        <we.video.wevideo.ui.support.WaveView
            android:id="@+id/layout_follow"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/main_green_btn"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/my_collect"
                android:textColor="@color/white"
                android:textSize="@dimen/title_normal" />
        </we.video.wevideo.ui.support.WaveView>

        <we.video.wevideo.ui.support.WaveView
            android:id="@+id/layout_comment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/main_green_btn"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/my_comment"
                android:textColor="@color/white"
                android:textSize="@dimen/title_normal" />
        </we.video.wevideo.ui.support.WaveView>
    </LinearLayout>

    <we.video.wevideo.ui.support.WaveButton
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_shape_main_white_btn_normal"
        android:gravity="center"
        android:text="@string/my_logout"
        android:textColor="@color/black"
        android:textSize="@dimen/title_normal" />

</RelativeLayout>